First working version of STS

--- a/WCFServiceWebRole1/Web.config
+++ b/WCFServiceWebRole1/Web.config
@@ -3,6 +3,7 @@
   <!--  To collect diagnostic traces, uncomment the section below or merge with existing system.diagnostics section.
         To persist the traces to storage, update the DiagnosticsConnectionString setting with your storage credentials.
         To avoid performance degradation, remember to disable tracing on production deployments.
+   -->
   <system.diagnostics>     
     <sharedListeners>
       <add name="AzureLocalStorage" type="WCFServiceWebRole1.AzureLocalStorageTraceListener, WCFServiceWebRole1"/>
@@ -10,6 +11,9 @@
     <sources>
       <source name="System.ServiceModel" switchValue="Verbose, ActivityTracing">
         <listeners>
+          <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
+            <filter type=""/>
+          </add>
           <add name="AzureLocalStorage"/>
         </listeners>
       </source>
@@ -19,8 +23,8 @@
         </listeners>
       </source>
     </sources> 
-   </system.diagnostics> -->
-  <system.diagnostics>
+   <!--</system.diagnostics>
+  <system.diagnostics>-->
     <trace>
       <listeners>
         <add type="Microsoft.WindowsAzure.Diagnostics.DiagnosticMonitorTraceListener, Microsoft.WindowsAzure.Diagnostics, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" name="AzureDiagnostics">
@@ -51,7 +55,8 @@
         </behavior>
       </serviceBehaviors>
     </behaviors>
-    <serviceHostingEnvironment multipleSiteBindingsEnabled="true"/>
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true"
+      multipleSiteBindingsEnabled="true" />
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true"/>
