--- a/Ws-TrustTests/Ws-TrustTests.csproj
+++ b/Ws-TrustTests/Ws-TrustTests.csproj
@@ -45,11 +45,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="WsTrustTests.cs" />
+    <Compile Include="WsTrustAzureTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="WsTrustLocalTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Ws-Trust\Ws-TrustHost.csproj">
+      <Project>{868C730E-E196-4C53-BB2D-F8E0BEA7636F}</Project>
+      <Name>Ws-TrustHost</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
